RESOLVED FIXED168461
Special URLs without a host are invalid
https://bugs.webkit.org/show_bug.cgi?id=168461
Summary Special URLs without a host are invalid
Alex Christensen
Reported 2017-02-16 13:40:12 PST
Special URLs without a host are invalid
Attachments
Patch (7.34 KB, patch)
2017-02-16 14:01 PST, Alex Christensen
thorton: review+
buildbot: commit-queue-
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (1.33 MB, application/zip)
2017-02-16 15:39 PST, Build Bot
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (850.98 KB, application/zip)
2017-02-16 15:42 PST, Build Bot
no flags
Alex Christensen
Comment 1 2017-02-16 14:01:37 PST
Build Bot
Comment 2 2017-02-16 15:39:15 PST
Comment on attachment 301821 [details] Patch Attachment 301821 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3135269 New failing tests: fast/dom/HTMLAnchorElement/set-href-attribute-protocol.html fast/dom/DOMURL/set-href-attribute-protocol.html
Build Bot
Comment 3 2017-02-16 15:39:18 PST
Created attachment 301843 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-02-16 15:42:49 PST
Comment on attachment 301821 [details] Patch Attachment 301821 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3135245 New failing tests: fast/dom/HTMLAnchorElement/set-href-attribute-protocol.html fast/dom/DOMURL/set-href-attribute-protocol.html
Build Bot
Comment 5 2017-02-16 15:42:52 PST
Created attachment 301844 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Note You need to log in before you can comment on or make changes to this bug.