Special URLs without a host are invalid https://bugs.webkit.org/show_bug.cgi?id=168461

Reviewed by Tim Horton.

LayoutTests/imported/w3c:

* web-platform-tests/url/a-element-expected.txt:
* web-platform-tests/url/a-element-xhtml-expected.txt:
* web-platform-tests/url/url-constructor-expected.txt:

Source/WebCore:

http://? should be invalid.  This matches Chrome and the spec and the intent of my implementation
of URLParser which already fails with urls like http:// and this was just an oversight.
Covered by newly passing web platform tests.  Updated API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parse):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):

LayoutTests:

* fast/dom/DOMURL/set-href-attribute-protocol.html:
* fast/dom/HTMLAnchorElement/script-tests/set-href-attribute-protocol.js:
Rebase tests.  The HTMLAnchorElement test is a little strange, but it'll be cleaned up once
url-setters.html in the web platform tests is cleaned up.



Canonical link: https://commits.webkit.org/185484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212470 268f45cc-cd09-0410-ab3c-d52691b4dbfc